# this-advantage

./: .gitignore  README.md
compend/: README.md  bot.py  docker-compose.yml  env.template  pyproject.toml  pytest.ini
compend/handler/: function.py  functions.py  library.py  settings.py  state_management.py
compend/notion/: api.py  data.py
compend/notion/data_types/: __init__.py  data_classes.py  response_object_classes.py  type_enums.py
compend/tests/: conftest.py  test_bot.py
compend/tests/handler/notion/: test_api.py
compend/tests/test_handler/: test_function.py  test_library.py  test_state_management.py
compend/tests/test_notion/: test_api.py
compend/tests/test_utils/: test_general.py
compend/tests/utils/: test_general.py
compend/utils/: general.py  logging.py
compend/views/: menu.py
