[tool.poetry]
name = "compend"
version = "0.1.0"
description = ""
authors = ["Ez Ablaza <ezra.ablaza.inbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
requests = "~2.28.1"
pydantic = "~1.10.4"
strenum = "~0.4.9"
py-cord = "~2.3.2"
redis = "~4.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "~7.2.0"
black = "~22.12.0"
pytest-asyncio = "~0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
